# ToyEmu

./: Cargo.toml  README.md  test.asm
aspen/: Cargo.toml
aspen-vid-converter/: Cargo.toml
aspen-vid-converter/.cargo/: config.toml
aspen-vid-converter/src/: main.rs
aspen/src/: cpu.rs  emulator.rs  instruction.rs  lib.rs  main.rs  memory.rs  mmu.rs  sleep.rs
aspen/src/cpu/: monitor.rs
aspen/src/emulator/: tests.rs
aspen/src/emulator/tests/: emu.rs
aspen/src/mmu/: address_range.rs  memory.rs
bmark/: Cargo.toml
bmark/src/: main.rs
graft/: Cargo.toml  spec.asm
graft-run/: Cargo.toml
graft-run/src/: lib.rs
graft/src/: lib.rs  main.rs
progs/: play-video.asm
