[package]
name = "aspen"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.0"
bytemuck = { version = "1.24.0", features = ["latest_stable_rust"] }
env_logger = "0.11.8"
log = "0.4.28"
thiserror = "2.0.17"
libc = { version = "0.2.177", optional = true }
windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_System_Performance"], optional = true }

[dev-dependencies]
graft = { path = "../graft" }
graft-run = { path = "../graft-run" }
serial_test = "3.2.0"

[features]
libc = ["dep:libc"]
windows = ["dep:windows"]
steady-clock = []
default = ["libc", "windows", "steady-clock"]