[package]
name = "aspen"
version = "0.1.0"
edition = "2024"

[dependencies]
bstr = "1.12.0"
bytemuck = { version = "1.24.0", features = ["latest_stable_rust"] }
env_logger = "0.11.8"
log = "0.4.28"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
yansi = "1.0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_System_Performance"] }

[target.'cfg(unix)'.dependencies]
libc =  "0.2.177"

[dev-dependencies]
graft = { path = "../graft" }
graft-run = { path = "../graft-run" }
serial_test = "3.2.0"

[features]
steady-clock = []
default = ["steady-clock"]
